Fix spacing

--- a/_sass/addon/custom.scss
+++ b/_sass/addon/custom.scss
@@ -1,9 +1,3 @@
-.sidebar-verse-wrapper {
-    width: 100%;         
-    margin-top: 0.25rem; 
-    text-align: center;  
-}
-
 .sidebar-verse {
     font-size: 0.75rem;
     color: var(--text-muted-color);
